# TraderMinion

./: .gitignore  Makefile  README.md  README_WINDOWS.md  SETUP.md  brose.py  build.spec  build_desktop.py  create_superuser.py  db.sqlite3  index.html  main.py  main_desktop.py  pyproject.toml  quick_test.py  requirements.txt  run_dev.py  server.py  setup.bat  start_all.bat  temp_script.py  test_api.py
app/: settings.py  urls.py
client/src/: App.tsx
client/src/components/: Dashboard.tsx  Sidebar.tsx  TradeRegistry.tsx
client/src/contexts/: AppContext.tsx
client/src/services/: api.ts
client/src/types/: trade.ts
desktop/: __init__.py  api_client.py  main.py  sidebar.py  utils.py  widgets.py
desktop/screens/: dashboard.py  trade_registration.py
logger/: admin.py  models.py  serializers.py  views.py
logger/migrations/: 0001_initial.py
scripts/: Makefile  README.md  build_desktop.bat  check_superuser.bat  clean.bat  createsuperuser.bat  help.bat  install.bat  makemigrations.bat  migrate.bat  run_all.ps1  shell.bat  start_desktop.bat  start_server.bat  test_api.bat
